# loop-improver-mcp

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  mcp-install.md  objectives.md
.github/agents/: repo-specialist-agent.agent.md
.github/insights/: README.md  loop-improver-mcp.md  repo-specialist-agent.md
.github/prompts/: improvement-loop.prompt.md
src/loop_improver_mcp/: __init__.py  loop_core.py  server.py
tests/: test_loop_core.py  test_server.py  test_source_readability.py
