[project]
# Last modified: 2026-07-14T00:00:00.000Z

name = "loop-improver-mcp"
version = "0.2.5"
description = "MCP server that creates repo-specific improvement loops from README, Copilot instructions, objectives, agents, and insights."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
    "vulture>=2.14",
]

[project.scripts]
loop-improver-mcp = "loop_improver_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["B", "C4", "D100", "D101", "D102", "D103", "D104", "F", "I", "RET", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80